--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -335,7 +335,7 @@
     <item row="0" column="1" rowspan="5" colspan="2">
      <widget class="QTabWidget" name="tabModules">
       <property name="currentIndex">
-       <number>0</number>
+       <number>7</number>
       </property>
       <widget class="QWidget" name="im_display_tab">
        <attribute name="title">
@@ -7418,41 +7418,145 @@ p, li { white-space: pre-wrap; }
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="seg_tab">
+      <widget class="QWidget" name="tab_seg">
        <attribute name="title">
         <string>Segmentation</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout_seg_tab" rowstretch="1,0,0,0,0,2,0" columnstretch="5,1,0,1,1,1">
-        <item row="4" column="4">
-         <widget class="QPushButton" name="createSegStructure">
-          <property name="text">
-           <string>Create structure</string>
+       <layout class="QGridLayout" name="gridLayout_62" rowstretch="0,3,2,0,4,0" columnstretch="3,0,1,2">
+        <item row="4" column="3" rowspan="2">
+         <widget class="QToolBox" name="toolBox_seg">
+          <property name="currentIndex">
+           <number>2</number>
           </property>
-         </widget>
-        </item>
-        <item row="5" column="2" rowspan="2" colspan="4">
-         <widget class="QToolBox" name="seg_toolBox">
-          <property name="autoFillBackground">
-           <bool>false</bool>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Plain</enum>
-          </property>
-          <widget class="QWidget" name="seg_toolBoxPage2">
+          <widget class="QWidget" name="seg_manual_contour">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>527</width>
-             <height>555</height>
+             <width>743</width>
+             <height>170</height>
             </rect>
            </property>
            <attribute name="label">
-            <string>Manual edits</string>
+            <string>Manual contouring &amp;&amp; edits</string>
            </attribute>
-           <layout class="QGridLayout" name="gridLayout_48" columnstretch="0,0,0">
+           <layout class="QGridLayout" name="gridLayout_60" rowstretch="0,0,0,0,0,0" columnstretch="1,0,3">
+            <item row="3" column="1">
+             <widget class="QLineEdit" name="undoSegText">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>Undo</string>
+              </property>
+             </widget>
+            </item>
             <item row="3" column="0">
-             <spacer name="spacer_seg3">
+             <widget class="QToolButton" name="undoSeg">
+              <property name="text">
+               <string>undo</string>
+              </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>../Downloads/undo.png</normaloff>../Downloads/undo.png</iconset>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0">
+             <widget class="QToolButton" name="segBrushButton">
+              <property name="text">
+               <string>Brush</string>
+              </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>../Downloads/brush.png</normaloff>../Downloads/brush.png</iconset>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="0">
+             <widget class="QToolButton" name="segEraseButton">
+              <property name="text">
+               <string>Eraser</string>
+              </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>../Downloads/eraser.png</normaloff>../Downloads/eraser.png</iconset>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0" colspan="2">
+             <widget class="QLineEdit" name="BrushSizeText">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>Brush size</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="2">
+             <widget class="QCheckBox" name="brushClipHU">
+              <property name="text">
+               <string>Use HU thresholds</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QLineEdit" name="segBrushBox">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Brush</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="2">
+             <widget class="QSlider" name="BrushSizeSlider">
+              <property name="minimum">
+               <number>1</number>
+              </property>
+              <property name="maximum">
+               <number>25</number>
+              </property>
+              <property name="value">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="1">
+             <widget class="QLineEdit" name="segEraseBox">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Eraser</string>
+              </property>
+             </widget>
+            </item>
+            <item row="5" column="1">
+             <spacer name="verticalSpacer_20">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
               </property>
@@ -7464,145 +7568,22 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="0" column="0" colspan="3">
-             <widget class="QGroupBox" name="groupBox_SegEditDraw">
-              <property name="title">
-               <string>Drawing</string>
-              </property>
-              <layout class="QGridLayout" name="gridLayout_SegEditDraw" columnstretch="1,1,3">
-               <item row="1" column="0">
-                <widget class="QToolButton" name="segEraseButton">
-                 <property name="text">
-                  <string>Eraser</string>
-                 </property>
-                 <property name="icon">
-                  <iconset>
-                   <normaloff>../Downloads/eraser.png</normaloff>../Downloads/eraser.png</iconset>
-                 </property>
-                 <property name="checkable">
-                  <bool>true</bool>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="1" colspan="2">
-                <widget class="QLineEdit" name="segEraseBox">
-                 <property name="enabled">
-                  <bool>false</bool>
-                 </property>
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="text">
-                  <string>Eraser</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="0">
-                <widget class="QToolButton" name="segBrushButton">
-                 <property name="text">
-                  <string>Brush</string>
-                 </property>
-                 <property name="icon">
-                  <iconset>
-                   <normaloff>../Downloads/brush.png</normaloff>../Downloads/brush.png</iconset>
-                 </property>
-                 <property name="checkable">
-                  <bool>true</bool>
-                 </property>
-                </widget>
-               </item>
-               <item row="2" column="0">
-                <widget class="QToolButton" name="undoSeg">
-                 <property name="text">
-                  <string>undo</string>
-                 </property>
-                 <property name="icon">
-                  <iconset>
-                   <normaloff>../Downloads/undo.png</normaloff>../Downloads/undo.png</iconset>
-                 </property>
-                </widget>
-               </item>
-               <item row="2" column="1" colspan="2">
-                <widget class="QLineEdit" name="undoSegText">
-                 <property name="enabled">
-                  <bool>false</bool>
-                 </property>
-                 <property name="text">
-                  <string>Undo</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="3" column="0" colspan="3">
-                <widget class="QLineEdit" name="BrushSizeText">
-                 <property name="enabled">
-                  <bool>false</bool>
-                 </property>
-                 <property name="text">
-                  <string>Brush size</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="4" column="0" colspan="3">
-                <widget class="QSlider" name="BrushSizeSlider">
-                 <property name="minimum">
-                  <number>1</number>
-                 </property>
-                 <property name="maximum">
-                  <number>25</number>
-                 </property>
-                 <property name="value">
-                  <number>5</number>
-                 </property>
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="1">
-                <widget class="QLineEdit" name="segBrushBox">
-                 <property name="enabled">
-                  <bool>false</bool>
-                 </property>
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="text">
-                  <string>Brush</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="2">
-                <widget class="QCheckBox" name="brushClipHU">
-                 <property name="text">
-                  <string>Use HU thresholds</string>
-                 </property>
-                </widget>
-               </item>
-              </layout>
-             </widget>
-            </item>
            </layout>
           </widget>
-          <widget class="QWidget" name="seg_toolBoxPage1">
+          <widget class="QWidget" name="page_thresholding">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>114</width>
-             <height>48</height>
+             <width>743</width>
+             <height>69</height>
             </rect>
            </property>
            <attribute name="label">
             <string>Thresholding</string>
            </attribute>
-           <layout class="QGridLayout" name="gridLayout_segTools" rowstretch="1,0,0,1,1,1,3" columnstretch="0,0">
-            <item row="0" column="1">
+           <layout class="QGridLayout" name="gridLayout_70" rowstretch="2,0">
+            <item row="0" column="0" rowspan="2">
              <widget class="QPushButton" name="applyThreshSeg">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -7615,34 +7596,21 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="3" column="1" rowspan="4">
-             <spacer name="spacer_seg2">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>40</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
            </layout>
           </widget>
-          <widget class="QWidget" name="seg_toolBoxPage5">
+          <widget class="QWidget" name="page">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>234</width>
-             <height>149</height>
+             <width>517</width>
+             <height>385</height>
             </rect>
            </property>
            <attribute name="label">
-            <string>Analysis</string>
+            <string>Export &amp;&amp; analyze</string>
            </attribute>
-           <layout class="QGridLayout" name="gridLayout_SegToolBox3">
+           <layout class="QGridLayout" name="gridLayout_61">
             <item row="0" column="0">
              <widget class="QPushButton" name="calcSegStatsButton">
               <property name="text">
@@ -7657,6 +7625,9 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
+            <item row="1" column="0" colspan="2">
+             <widget class="QTableWidget" name="tableSegStrucStats"/>
+            </item>
             <item row="2" column="0">
              <widget class="QPushButton" name="exportSegStrucButton">
               <property name="text">
@@ -7664,63 +7635,67 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="1" column="0" colspan="2">
-             <widget class="QTableWidget" name="tableSegStrucStats"/>
-            </item>
            </layout>
           </widget>
          </widget>
         </item>
-        <item row="6" column="0">
-         <widget class="QSlider" name="segViewSlider">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="5">
-         <widget class="QPushButton" name="deleteSegStructure">
-          <property name="text">
-           <string>Delete structure</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="1">
+        <item row="5" column="2">
          <widget class="QComboBox" name="segSelectView"/>
         </item>
-        <item row="0" column="0" rowspan="6" colspan="2">
-         <widget class="QWidget" name="VTK_SegView" native="true"/>
+        <item row="2" column="3">
+         <widget class="QWidget" name="VTK_SegHistView" native="true"/>
         </item>
-        <item row="0" column="2" colspan="4">
-         <widget class="QWidget" name="VTK_SegHistView" native="true">
-          <layout class="QGridLayout" name="gridLayout_49"/>
+        <item row="1" column="3">
+         <widget class="QGroupBox" name="groupBox_segStruct">
+          <property name="title">
+           <string>Structures overview</string>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_64" rowstretch="1,0,0" columnstretch="1,1,1">
+           <item row="2" column="1">
+            <widget class="QPushButton" name="createSegStruct">
+             <property name="text">
+              <string>Create structure</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLineEdit" name="lineEdit_createStructSeg">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>Structure name</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1" colspan="2">
+            <widget class="QLineEdit" name="segStructName"/>
+           </item>
+           <item row="2" column="0">
+            <widget class="QCheckBox" name="initStructCheck">
+             <property name="layoutDirection">
+              <enum>Qt::RightToLeft</enum>
+             </property>
+             <property name="text">
+              <string>All series</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="2">
+            <widget class="QPushButton" name="deleteSegStruct">
+             <property name="text">
+              <string>Delete structure</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0" colspan="3">
+            <widget class="QListWidget" name="segStructList"/>
+           </item>
+          </layout>
          </widget>
         </item>
-        <item row="4" column="2" colspan="2">
-         <widget class="QCheckBox" name="initStrucCheck">
-          <property name="layoutDirection">
-           <enum>Qt::RightToLeft</enum>
-          </property>
-          <property name="text">
-           <string>All series</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="4" colspan="2">
-         <widget class="QLineEdit" name="segStructureName"/>
-        </item>
-        <item row="3" column="2" colspan="2">
-         <widget class="QLineEdit" name="lineEdit_createStructureSeg">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="text">
-           <string>Structure name</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2" rowspan="2" colspan="4">
-         <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="2,1,2,1">
+        <item row="3" column="3">
+         <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="2,1,2,1">
           <item>
            <widget class="QLineEdit" name="threshMinBox">
             <property name="enabled">
@@ -7774,6 +7749,16 @@ p, li { white-space: pre-wrap; }
            </widget>
           </item>
          </layout>
+        </item>
+        <item row="1" column="0" rowspan="4" colspan="3">
+         <widget class="QWidget" name="VTK_SegView" native="true"/>
+        </item>
+        <item row="5" column="0" colspan="2">
+         <widget class="QSlider" name="segViewSlider">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
