--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -8183,46 +8183,16 @@ p, li { white-space: pre-wrap; }
                <attribute name="title">
                 <string>Duet Web Control</string>
                </attribute>
-               <layout class="QGridLayout" name="gridLayout_DuetWebControl" columnstretch="1,2,1,2,7" columnminimumwidth="0,0,0,0,0">
-                <item row="0" column="0">
-                 <widget class="QLineEdit" name="lineEdit_65">
-                  <property name="enabled">
-                   <bool>false</bool>
-                  </property>
-                  <property name="text">
-                   <string>IP address</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="1" column="1">
+               <layout class="QGridLayout" name="gridLayout_DuetWebControl" columnstretch="1,1,1,4,0">
+                <item row="0" column="2">
                  <widget class="QPushButton" name="loadDuetPage">
                   <property name="text">
                    <string>Load Duet Web Control</string>
                   </property>
                  </widget>
                 </item>
-                <item row="0" column="2" rowspan="2">
-                 <widget class="Line" name="line_25">
-                  <property name="orientation">
-                   <enum>Qt::Vertical</enum>
-                  </property>
-                 </widget>
-                </item>
                 <item row="0" column="1">
                  <widget class="QLineEdit" name="DuetIPAddress"/>
-                </item>
-                <item row="0" column="4">
-                 <spacer name="horizontalSpacer_78">
-                  <property name="orientation">
-                   <enum>Qt::Horizontal</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>40</width>
-                    <height>20</height>
-                   </size>
-                  </property>
-                 </spacer>
                 </item>
                 <item row="2" column="0" colspan="5">
                  <widget class="QWebEngineView" name="DuetControlView">
@@ -8236,19 +8206,42 @@ p, li { white-space: pre-wrap; }
                   </property>
                  </widget>
                 </item>
-                <item row="0" column="3">
+                <item row="0" column="0">
+                 <widget class="QLineEdit" name="lineEdit_65">
+                  <property name="enabled">
+                   <bool>false</bool>
+                  </property>
+                  <property name="text">
+                   <string>IP address</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="2">
                  <widget class="QPushButton" name="definePhOperFolder">
                   <property name="text">
                    <string>Define Input Folder</string>
                   </property>
                  </widget>
                 </item>
-                <item row="1" column="3">
+                <item row="1" column="0" colspan="2">
                  <widget class="QLineEdit" name="PhOperFolder">
                   <property name="enabled">
                    <bool>false</bool>
                   </property>
                  </widget>
+                </item>
+                <item row="0" column="3" colspan="2">
+                 <spacer name="horizontalSpacer_78">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
                 </item>
                </layout>
               </widget>
