--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -1560,9 +1560,6 @@
           </property>
          </spacer>
         </item>
-        <item row="0" column="1" rowspan="3" colspan="2">
-         <widget class="QWidget" name="VTK_view_3D" native="true"/>
-        </item>
         <item row="3" column="2">
          <spacer name="View3DhorizontalSpacer_79">
           <property name="orientation">
@@ -1589,7 +1586,32 @@
           </property>
          </spacer>
         </item>
-        <item row="1" column="3">
+        <item row="0" column="1" rowspan="2" colspan="2">
+         <widget class="QWidget" name="VTK_view_3D" native="true"/>
+        </item>
+        <item row="2" column="1" colspan="2">
+         <widget class="QTabWidget" name="tabWidget_3Dview">
+          <property name="currentIndex">
+           <number>0</number>
+          </property>
+          <widget class="QWidget" name="tab_40">
+           <attribute name="title">
+            <string>Structures</string>
+           </attribute>
+           <layout class="QGridLayout" name="gridLayout_74">
+            <item row="0" column="0">
+             <widget class="QTableWidget" name="_3D_Struct_table"/>
+            </item>
+           </layout>
+          </widget>
+          <widget class="QWidget" name="tab_41">
+           <attribute name="title">
+            <string>Plan</string>
+           </attribute>
+          </widget>
+         </widget>
+        </item>
+        <item row="1" column="3" rowspan="2">
          <widget class="QGroupBox" name="View3DgroupBox_13">
           <property name="title">
            <string>3D view</string>
@@ -1914,6 +1936,19 @@
            </item>
           </layout>
          </widget>
+        </item>
+        <item row="1" column="0">
+         <spacer name="verticalSpacer_19">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </widget>
@@ -8331,8 +8366,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>213</width>
-             <height>127</height>
+             <width>261</width>
+             <height>152</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8473,8 +8508,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>102</width>
-             <height>41</height>
+             <width>119</width>
+             <height>50</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8501,8 +8536,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>444</width>
-             <height>385</height>
+             <width>440</width>
+             <height>365</height>
             </rect>
            </property>
            <attribute name="label">
