--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -1619,6 +1619,16 @@
             <string>Plan_Brachy</string>
            </attribute>
           </widget>
+          <widget class="QWidget" name="tab_43">
+           <attribute name="title">
+            <string>Plan_Proton</string>
+           </attribute>
+           <layout class="QGridLayout" name="gridLayout_76">
+            <item row="0" column="0">
+             <widget class="QTableWidget" name="_3D_proton_table"/>
+            </item>
+           </layout>
+          </widget>
          </widget>
         </item>
         <item row="1" column="3" rowspan="2">
@@ -8376,8 +8386,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>446</width>
-             <height>397</height>
+             <width>261</width>
+             <height>152</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8518,14 +8528,14 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>446</width>
-             <height>397</height>
+             <width>193</width>
+             <height>119</height>
             </rect>
            </property>
            <attribute name="label">
             <string>Thresholding</string>
            </attribute>
-           <layout class="QGridLayout" name="gridLayout_70" rowstretch="2,0,0,0,0" columnstretch="1,0,1">
+           <layout class="QGridLayout" name="gridLayout_70" rowstretch="2,0,0,0" columnstretch="1,0,1">
             <item row="0" column="2">
              <widget class="QSpinBox" name="indexMinThreshSeg"/>
             </item>
@@ -8585,8 +8595,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>446</width>
-             <height>397</height>
+             <width>241</width>
+             <height>179</height>
             </rect>
            </property>
            <attribute name="label">
